sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: overloaded method value & with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
    	else if (i=0 & plusPetit(i+1,i)) {
                     ^AlgGnomeSort:11: error: type mismatch;
 found   : Unit
 required: Boolean
    	else if (i=0 & plusPetit(i+1,i)) {
                  ^